# ETL

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
postgres_to_es/: checkers.py  conf.toml  errors.py  loader.py  main.py  process.py  processes.py  state.json  state.py
